--- a/MacUIDynamicPointer/Info.plist
+++ b/MacUIDynamicPointer/Info.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>com.apple.security.accessibility</key>
-	<true/>
+	<key>NSAccessibilityUsageDescription</key>
+	<string>Accessibility permissions are used to get information about elements under the pointer.</string>
 </dict>
 </plist>
